--- a/apps/admin/public/index.html
+++ b/apps/admin/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tijaniyah Muslim Pro – Admin</title>
   </head>
-  <body class="bg-slate-950">
+  <body>
     <div id="root"></div>
   </body>
   </html>
